--- a/ui/src/app/editor/dialog/migrate-pipeline-processors/migrate-pipeline-processors.component.html
+++ b/ui/src/app/editor/dialog/migrate-pipeline-processors/migrate-pipeline-processors.component.html
@@ -31,21 +31,56 @@
                     </div>
                 </form>
                 <mat-slide-toggle color="primary" [(ngModel)]="advancedSettings">
-                    Configure deployment options
+                    Configure deployment settings
                 </mat-slide-toggle>
                 <mat-divider *ngIf="advancedSettings" style="margin: 1em 0 1em 0;"></mat-divider>
                 <div *ngIf="advancedSettings">
                     <div>
-                        <b>Pipeline Operation Policies</b>
+                        <b>Operation Policies</b>
                     </div>
 
-                    <div style="margin-top: 2em">
+                    <div style="margin-top: 1em">
                         <div fxFlex="100" fxLayout="row">
-                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left top">
-                                <span>Relay Policy</span>
+                            <div fxFlex="55" fxLayout="row" fxLayoutAlign="left top">
+                                <span>Preemption</span>
                             </div>
                         </div>
-                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                        <div fxFlex="45" fxLayout="row" fxLayoutAlign="start center">
+                            <mat-slide-toggle #preemptionSlideToggle color="accent"
+                                              [(ngModel)]="selectedPreemption"
+                                              [disabled]="true">
+                                {{preemptionSlideToggle.checked ? 'enabled' : 'disabled'}}
+                            </mat-slide-toggle>
+                        </div>
+                    </div>
+
+                    <div style="margin-top: 1em" *ngIf="selectedPreemption">
+                        <div fxFlex="100" fxLayout="row">
+                            <div fxFlex="55" fxLayout="row" fxLayoutAlign="left top">
+                                <span>Priority</span>
+                            </div>
+                        </div>
+                        <div fxFlex="45" fxLayout="row" fxLayoutAlign="start center">
+                            <form [formGroup]="priorityForm">
+                                <mat-form-field appearance="fill" color="accent">
+                                    <mat-label>Select priority class</mat-label>
+                                    <mat-select formControlName="priorityForm" [disabled]="true">
+                                        <mat-option *ngFor="let priority of pipelinePriorityClasses" [value]="priority">
+                                            {{priority.viewValue}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div style="margin-top: 1em">
+                        <div fxFlex="100" fxLayout="row">
+                            <div fxFlex="55" fxLayout="row" fxLayoutAlign="left top">
+                                <span>Event Relay</span>
+                            </div>
+                        </div>
+                        <div fxFlex="45" fxLayout="row" fxLayoutAlign="start center">
                             <mat-button-toggle-group #relayGroup="matButtonToggleGroup" aria-label="Relay strategy"
                                                      [disabled]="true"
                                                      [value]="selectedRelayStrategyVal"
@@ -58,11 +93,11 @@
 
                     <div style="margin-top: 1em">
                         <div fxFlex="100" fxLayout="row">
-                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left top">
-                                <span>Execution Policy</span>
+                            <div fxFlex="66" fxLayout="row" fxLayoutAlign="left top">
+                                <b>Deployment Options</b>
                             </div>
                         </div>
-                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                        <div fxFlex="45" fxLayout="row" fxLayoutAlign="start center">
                             <mat-radio-group
                                     aria-labelledby="execution-policy-radio-group-label"
                                     class="execution-policy-radio-group"
@@ -70,7 +105,7 @@
                                     (change)="onExecutionPolicyChange($event.value)">
                                 <mat-radio-button class="execution-policy-radio-button"
                                                   *ngFor="let policy of pipelineExecutionPolicies"
-                                                  [disabled]="isExecutinoPolicyDisabled()"
+                                                  [disabled]="true"
                                                   [value]="policy">{{policy}}
                                 </mat-radio-button>
                             </mat-radio-group>
@@ -79,9 +114,14 @@
 
                     <div style="margin: 1em 0 1em 0;">
                         <div>
-                            <b>Node Execution Targets</b>
+                            <b>Migration Targets</b>
                         </div>
-                        <div style="margin-top: 2em">
+                        <div style="margin: 1em 0 1em 0;" *ngIf="selectedPipelineExecutionPolicy == 'custom'">
+                            <node-tag-selector [nodes]="edgeNodes" [selectedTagsAfterUpdate]="selectedNodeTags"
+                                               (createDynamicallySelectedTags)="nodesFromSelectedTags($event)"
+                                               (emitSelectedNodeTags)="updateNodeTags($event)"></node-tag-selector>
+                        </div>
+                        <div style="margin-top: 1em">
                             <mat-accordion class="example-headers-align">
 
                                 <mat-expansion-panel (opened)="panelOpenState = true"
@@ -89,19 +129,19 @@
                                                      [expanded]="panelOpenState">
                                     <mat-expansion-panel-header>
                                         <mat-panel-description>
-                                            Modify deployment targets: <b>{{selectedPipelineExecutionPolicy}}</b>
+                                            Select migration targets: <b>{{selectedPipelineExecutionPolicy}}</b>
                                             <mat-icon>storage</mat-icon>
                                         </mat-panel-description>
                                     </mat-expansion-panel-header>
 
                                     <div *ngFor="let processors of tmpPipeline.sepas">
                                         <div fxFlex="100" fxLayout="row">
-                                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">
+                                            <div fxFlex="66" fxLayout="row" fxLayoutAlign="left center">
                                                 <span>{{processors.name}}</span>
                                             </div>
                                         </div>
 
-                                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                                        <div fxFlex="45" fxLayout="row" fxLayoutAlign="start center">
                                             <mat-form-field dense>
                                                 <mat-select [(ngModel)]="processors.deploymentTargetNodeId"
                                                             [disabled]="disableNodeSelectionForProcessors.value"
@@ -117,12 +157,12 @@
                                     </div>
                                     <div *ngFor="let sinks of tmpPipeline.actions">
                                         <div fxFlex="100" fxLayout="row">
-                                            <div fxFlex="50" fxLayout="row" fxLayoutAlign="left center">
+                                            <div fxFlex="55" fxLayout="row" fxLayoutAlign="left center">
                                                 <span>{{sinks.name}}</span>
                                             </div>
                                         </div>
 
-                                        <div fxFlex="50" fxLayout="row" fxLayoutAlign="start center">
+                                        <div fxFlex="45" fxLayout="row" fxLayoutAlign="start center">
                                             <mat-form-field dense>
                                                 <mat-select [(ngModel)]="sinks.deploymentTargetNodeId"
                                                             [disabled]="disableNodeSelectionForSinks.value"
