Start refactoring connect ui code

--- a/ui/src/app/connect/components/format-form/format-form.component.html
+++ b/ui/src/app/connect/components/format-form/format-form.component.html
@@ -16,7 +16,11 @@
   ~
   -->
 
-<app-format-list [allFormats]="allFormats" [(selectedFormat)]="selectedFormat" (selectedFormatEmitter)="formatSelected($event)" (validateEmitter)="validateAll($event)">
-</app-format-list>
+<sp-format-list
+        [allFormats]="allFormats"
+        [selectedFormat]="selectedFormat"
+        (selectedFormatEmitter)="formatSelected($event)"
+        (validateEmitter)="validateAll($event)">
+</sp-format-list>
 
 
