--- a/ui/src/app/connect/components/select-format/select-format.component.html
+++ b/ui/src/app/connect/components/select-format/select-format.component.html
@@ -16,22 +16,28 @@
         <h4>Configure format</h4>
     </div>
 
-    <div class="sp-blue-border padding format-configuration">
-        <div fxFlex="100" *ngIf="selectedFormat">
-            <form [formGroup]="formatForm" fxFlex="100">
-                <app-static-property *ngFor="let config of selectedFormat.config"
-                                     [staticProperty]="config"
-                                     [staticProperties]="adapterDescription.config"
-                                     [adapterId]="adapterDescription.appId"
-                                     [parentForm]="formatForm"
-                                     [fieldName]="config.internalName"
-                                     (updateEmitter)="triggerUpdate($event)"
-                                     [completedStaticProperty]="completedStaticProperty">
+    <div *ngIf="selectedFormat">
 
-                </app-static-property>
-                <h5 *ngIf="selectedFormat.config.length === 0" style="text-align:center;">(no further
-                    configuration needed)</h5>
-            </form>
+        <div *ngIf="selectedFormat.config.length > 0">
+            <div class="sp-blue-border padding" style="padding: 15px;">
+                <form [formGroup]="formatForm" fxFlex="100">
+                    <app-static-property *ngFor="let config of selectedFormat.config"
+                                         [staticProperty]="config"
+                                         [staticProperties]="adapterDescription.config"
+                                         [adapterId]="adapterDescription.appId"
+                                         [parentForm]="formatForm"
+                                         [fieldName]="config.internalName"
+                                         (updateEmitter)="triggerUpdate($event)"
+                                         [completedStaticProperty]="completedStaticProperty">
+
+                    </app-static-property>
+                </form>
+            </div>
+        </div>
+        <div *ngIf="selectedFormat.config.length === 0" class="sp-blue-border padding" style="padding: 15px;">
+            <div  style="text-align:center;">
+                <h5 >(no further configuration needed)</h5>
+            </div>
         </div>
     </div>
 </div>
