--- a/ui/src/app/connect/components/specific-adapter-settings/specific-adapter-settings.component.html
+++ b/ui/src/app/connect/components/specific-adapter-settings/specific-adapter-settings.component.html
@@ -5,19 +5,11 @@
             <h4>Basic settings</h4>
         </div>
 
-        <div class="sp-blue-border padding" style="padding: 15px;">
-            <form [formGroup]="specificAdapterForm" fxFlex="100">
-                <app-static-property *ngFor="let config of adapterDescription.config"
-                                     [staticProperty]="config"
-                                     [staticProperties]="adapterDescription.config"
-                                     [adapterId]="adapterDescription.appId"
-                                     [parentForm]="specificAdapterForm"
-                                     [fieldName]="config.internalName"
-                                     (updateEmitter)="triggerUpdate($event)"
-                                     [completedStaticProperty]="completedStaticProperty">
-                </app-static-property>
-            </form>
+        <sp-configuration-group
+                [configurationGroup]="specificAdapterForm"
+                [adapterId]="adapterDescription.appId"
+                [configuration]="adapterDescription.config">
+        </sp-configuration-group>
 
-        </div>
     </div>
 </div>
